k8s/apps/slaanesh/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slaanesh
  namespace: slaanesh
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Slaanesh"
    gethomepage.dev/description: "Game tracker"
    gethomepage.dev/group: "media"
    gethomepage.dev/icon: "mdi-controller-variant"
    gethomepage.dev/href: "https://slaanesh.item.fyi"
    gethomepage.dev/siteMonitor: "http://slaanesh.slaanesh.svc.cluster.local"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=slaanesh"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`slaanesh.item.fyi`)
      middlewares:
        - name: authentik
          namespace: authentik
      services:
        - name: slaanesh
          port: 80
  tls: {}
